# texttospeech-using-api

./: .gitignore  crud.py  database.py  main.py  models.py  readme.md  requirements.txt  setup.cfg  utils.py
tts_api/: crud.py  database.py  main.py  models.py  schemas.py  upload-file.py
tts_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
