[metadata]
name = tts-api
version = 0.1.0
author = Saurav Tripathi
author_email = contact-me-github@isauravmanitripathi
description = A Text-to-Speech API using FastAPI
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/isauravmanitripathi/texttospeech-using-api
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    fastapi
    uvicorn
    sqlalchemy
    edge-tts
    b2sdk
    httpx
    python-dotenv

[options.entry_points]
console_scripts =
    tts-api=tts_api.main:main
